@@ -94,6 +94,7 @@
       <tr valign="top">
         <td><metal:field use-macro="python:here.widget('preferredMeeting', mode='edit')"/></td>
         <td><metal:field use-macro="python:here.widget('itemKeywords', mode='edit')"/></td>
+        <td><metal:field use-macro="python:here.widget('sendToAuthority', mode='edit')"/></td>
         <td><metal:field use-macro="python:here.widget('otherMeetingConfigsClonableTo', mode='edit')"/></td>
         <td><metal:field use-macro="python:here.widget('privacy', mode='edit')"/></td>
       </tr>
